# Object-Size-Measurement

./: CMakeLists.txt  measure_size.cpp  my_minarearect.cpp  my_minarearect.h  mycontour.cpp  mycontour.h  myconvexhull.cpp  myconvexhull.h
